# Cpp-StreamingServer_v2

./: CMakeLists.txt  PlayVideo.cpp  Server.cpp  main.cpp
Cpp-StreamingClient/: CMakeLists.txt  main.cpp
include/: PlayVideo.h  Server.h
